Fix issues with display scrollbar corner in several themes

--- a/src/themes/clean.scss
+++ b/src/themes/clean.scss
@@ -110,8 +110,7 @@ body {
 }
 
 .scroll-corner {
-    background-color: black;
-    display:none;
+    background-color: #191814;
 }
 
 .scroll-split-button {
