--- a/src/themes/default.scss
+++ b/src/themes/default.scss
@@ -135,8 +135,7 @@ body {
 }
 
 .scroll-corner {
-    background-color: black;
-    display: none;
+    background-color: #191814;
 }
 
 .scroll-split-button {
